@@ -1095,15 +1095,8 @@ weak_name2altname (const char * name)
 static const char *
 weak_altname2name (const char * name)
 {
-  char * weak_name;
-  char * dot;
-
   gas_assert (weak_is_altname (name));
-
-  weak_name = xstrdup (name + 6);
-  if ((dot = strchr (weak_name, '.')))
-    *dot = 0;
-  return weak_name;
+  return xstrdup (name + 6);
 }
 
 /* Make a weak symbol name unique by
@@ -1120,9 +1113,6 @@ weak_uniquify (const char * name)
     unique = an_external_name;
 #endif
   gas_assert (weak_is_altname (name));
-
-  if (strchr (name + sizeof (weak_altprefix), '.'))
-    return name;
 
   ret = xmalloc (strlen (name) + strlen (unique) + 2);
   strcpy (ret, name);
