@@ -1,3 +1,10 @@
+2010-11-05  Dave Korn  <dave.korn.cygwin@gmail.com>
+
+	* config/obj-coff.c (weak_altname2name): Don't infer from the presence
+	of a period that the symbol has been already uniquify-d.
+	(weak_uniquify): Don't worry that the symbol might have been already
+	uniquify-d.
+
 2010-11-04  Alan Modra  <amodra@gmail.com>
 
 	* config/tc-ppc.c (nop_limit): New var.
